# kommo-command-love-bali

./: .dockerignore  .env.example  .env.mock  .gitignore  DEPLOYMENT.md  Dockerfile  KOMMO_API_GUIDE.md  README-QUICKSTART.md  README.md  cloudbuild.yaml  deploy.sh  example_kommo_usage.py  firebase_example.py  mock_firebase_server.py  prompt_coming.txt  pyproject.toml  test_firestore_sessions.py  test_incoming_lead_handler.py  test_kommo_api.py  test_salesbot_fix.py  test_update_lead.py
.devcontainer/: .env.example  devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
src/kommo_command/: __about__.py  __init__.py  app.py  config.py  config_validator.py  logging_setup.py  messages.py  service_factory.py  types.py
src/kommo_command/handlers/: __init__.py  base_handler.py  handler_manager.py  incoming_lead_handler.py  incoming_message_handler.py
src/kommo_command/models/: __init__.py  base.py  session.py
src/kommo_command/services/: __init__.py  firebase_admin_listener.py  firestore_service.py  kommo_api_service.py  love_bali_service.py
src/kommo_lang_select/: __init__.py  app.py  config.py  firebase_admin_listener.py  service_factory.py  types.py
src/kommo_lang_select/handlers/: __init__.py  base_handler.py  incoming_lead_handler.py
src/kommo_lang_select/models/: __init__.py  base.py  lead.py  session.py
src/kommo_lang_select/services/: __init__.py  firebase_admin_listener.py  firestore_service.py  kommo_api_service.py
tests/: advanced_firebase_diagnostic.py  diagnose_firebase.py  example_kommo_usage.py  test_firebase_admin.py  test_firestore_sessions.py  test_incoming_lead_handler.py  test_incoming_message_handler.py  test_kommo_api.py  test_love_bali_service.py  test_salesbot_fix.py  test_settings.py
