[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "kommo-lang-select"
version = "0.1.0"
description = "Background worker that listens to Firebase Realtime Database changes and logs events"
authors = [
  { name = "Your Name" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["firebase", "realtime-database", "listener", "sse", "python"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "firebase-admin>=6.0,<7.0",
  "pydantic>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-cov>=4.1,<5.0",
  "ruff>=0.5.0,<1.0.0",
  "black>=24.3,<25.0",
  "mypy>=1.8.0,<2.0",
  "types-requests>=2.31.0.6,<3.0",
]

[project.scripts]
kommo-lang-select = "kommo_lang_select.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kommo_lang_select"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["kommo_lang_select"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
check_untyped_defs = true
mypy_path = "src"
